--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>Dashboard</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <link rel="icon" href="assets/images/logo.png">
+  <link rel="icon" href="assets/images/logo.svg">
   <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="assets/css/style.css">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <!-- <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet"> -->
 
 </head>
 
@@ -23,13 +23,10 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
-        <span class="d-none d-lg-block">
-          <img src="assets/images/logo.png">
-        </span>
+      <a href="index.html" class="logo">
+          <img src="assets/images/logo.svg" class="ms-2 ms-lg-3">
       </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
+      <i class="fa fa-bars text-dark toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
     <nav class="header-nav ms-auto">
@@ -44,7 +41,7 @@
         <li class="nav-item dropdown">
 
           <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-            <i class="bi bi-bell"></i>
+            <i class="fa fa-bell"></i>
             <!-- <span class="badge bg-primary badge-number">4</span> -->
           </a><!-- End Notification Icon -->
 
@@ -115,11 +112,11 @@
           </ul><!-- End Notification Dropdown Items -->
 
         </li><!-- End Notification Nav -->
-        <li class="nav-item dropdown pe-3">
+        <li class="nav-item dropdown pe-lg-4 pe-3">
 
-          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+          <a class="nav-link nav-profile d-flex align-items-center pe-0 pe-lg-2" href="#" data-bs-toggle="dropdown">
+            <span class="d-none d-md-block pe-2">K. Anderson</span>
             <img src="assets/images/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
           </a><!-- End Profile Iamge Icon -->
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
@@ -228,14 +225,6 @@
 
   </main>
   <!-- End #main -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- JS Files -->
-  <script
-  src="https://code.jquery.com/jquery-3.6.2.slim.js"
-  integrity="sha256-OflJKW8Z8amEUuCaflBZJ4GOg4+JnNh9JdVfoV+6biw="
-  crossorigin="anonymous"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
