--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="icon" href="assets/images/logo.png">
+    <link rel="icon" href="assets/images/logo.svg">
     <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -15,18 +15,18 @@
 <body>
     <div class="first_bar">
         <a href="index.html">
-            <img src="assets/images/logo.png" class="ms-lg-4 ms-3">
+            <img src="assets/images/logo.svg" class="ms-lg-4 ms-3 ms-lg5">
         </a>
     </div>
 
     <div class="container pt-5">
         <div class="row justify-content-center">
             <div class="col-xxl-4 col-xl-5 col-lg-6 col-md-8 col-sm-9">
-                <h4 class="text-center">Welcome To <span class="textOrange">K</span>inetik Platform</h4>
+                <h4 class="text-center">Welcome To <span class="text-primary">K</span>inetik Platform</h4>
                 <p class="text-center pt-1">Welcome Back, Please Enter The Required Data</p>
                 <div class="card rounded-4 p-4 mt-4">
                     <h5 class="text-center">Sign in</h5>
-                    <form class="formGeneral" action="#">
+                    <form class="form" action="#">
                         <div class="mb-3 mt-3">
                             <label for="username" class="form-label fw-bold text-black">User Name</label>
                             <input type="text" required class="form-control " id="username" placeholder="Ex :John Doe" name="username">
@@ -34,13 +34,13 @@
                         <label for="pwd" class="form-label fw-bold text-black">Password</label>
                         <div class="input-group mb-3">
                             <input type="password" required class="form-control  border-end-0" id="txtPassword" placeholder="Enter password" name="password">
-                            <span class="input-group-text bg-white"><i id="toggle_pwd" class="fa fa-eye field_icon textOrange"></i></span>
+                            <span class="input-group-text bg-white"><i id="toggle_pwd" class="fa fa-eye field_icon text-primary"></i></span>
                         </div>
                         <div class="mb-3">
                         </div>
                         <div class="d-flex justify-content-between py-3">
                             <div class="form-check mb-3">
-                                <label class="form-check-label textOrange fw-bold">
+                                <label class="form-check-label text-primary fw-bold">
                                   <input class="form-check-input" type="checkbox" name="remember"> Remember me
                                 </label>
                             </div>
