--- a/organization-edit.html
+++ b/organization-edit.html
@@ -8,7 +8,7 @@
   <title>Dashboard</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
-  <link rel="icon" href="assets/images/logo.png">
+  <link rel="icon" href="assets/images/logo.svg">
   <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -23,13 +23,10 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt="">
-        <span>
-          <img src="assets/images/logo.png">
-        </span>
+      <a href="index.html" class="logo">
+        <img src="assets/images/logo.svg" class="ms-2 ms-lg-3">
       </a>
-      <i class="bi bi-list toggle-sidebar-btn"></i>
+      <i class="fa fa-bars text-dark toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
 
     <nav class="header-nav ms-auto">
@@ -44,7 +41,7 @@
         <li class="nav-item dropdown">
 
           <a class="nav-link nav-icon" href="#" data-bs-toggle="dropdown">
-            <i class="bi bi-bell"></i>
+            <i class="fa fa-bell"></i>
             <!-- <span class="badge bg-primary badge-number">4</span> -->
           </a><!-- End Notification Icon -->
 
@@ -115,11 +112,11 @@
           </ul><!-- End Notification Dropdown Items -->
 
         </li><!-- End Notification Nav -->
-        <li class="nav-item dropdown pe-3">
+        <li class="nav-item dropdown pe-lg-4 pe-3">
 
-          <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
+          <a class="nav-link nav-profile d-flex align-items-center pe-0 pe-lg-2" href="#" data-bs-toggle="dropdown">
+            <span class="d-none d-md-block pe-2">K. Anderson</span>
             <img src="assets/images/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
           </a><!-- End Profile Iamge Icon -->
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
@@ -180,7 +177,7 @@
 
     <!-- arrow for side menu -->
     <!-- <div onclick="changeIcon(this)" class="d-none d-xl-block">
-      <i class="fa fa-arrow-alt-circle-left textOrange toggle-sidebar-btn2 absoluteBtn fa-lg" ></i>
+      <i class="fa fa-arrow-alt-circle-left text-primary toggle-sidebar-btn2 absoluteBtn fa-lg" ></i>
     </div> -->
 
     <ul class="sidebar-nav  pt-md-2" id="sidebar-nav">
@@ -225,11 +222,11 @@
 
     <div class="pagetitle">
       <h1 class="text-black">Organization</h1>
-      <p class="py-3 fw-bold textGray">This is your company page.  This is a feed of the most important things you need to know.  Look out for new job vacancies, HR updates, All company announcements.  Also this is where you can link quickly to your dedicated HR platform too</p>
+      <p class="py-3 fw-bold text-secondary">This is your company page.  This is a feed of the most important things you need to know.  Look out for new job vacancies, HR updates, All company announcements.  Also this is where you can link quickly to your dedicated HR platform too</p>
       <div class="card rounded-3">
         <div class="card-body pt-3">
-          <h1><span class="textOrange">K</span>inetik <i class="fa fa-edit textOrange"></i></h1>
-          <form class="formGeneral" action="#">
+          <img src="assets/images/logo.svg"> <span><i class="fa fa-edit fa-lg text-primary mt-1"></i></span>
+          <form class="form px-2" action="#">
             <div class="mb-3 mt-3">
               <label for="organization" class="form-label fw-bold text-black">Organization Name</label>
               <input type="text" required class="form-control " id="organization" placeholder="Ex :Kinetik" name="organization">
@@ -260,13 +257,8 @@
   </main>
   <!-- End #main -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
   <!-- JS Files -->
-  <script
-  src="https://code.jquery.com/jquery-3.6.2.slim.js"
-  integrity="sha256-OflJKW8Z8amEUuCaflBZJ4GOg4+JnNh9JdVfoV+6biw="
-  crossorigin="anonymous"></script>
+  
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
