--- a/index.html
+++ b/index.html
@@ -176,15 +176,20 @@
   <aside id="sidebar" class="sidebar">
 
     <ul class="sidebar-nav  pt-md-2" id="sidebar-nav">
-
       <li class="nav-item">
         <a class="nav-link active" href="organization.html">
-          <img src="assets/images/organizationActive.svg" class="mb-2" alt="">
+          <i class="fa fa-home fa-2x mb-2"></i>
+          <span>Home</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="organization.html">
+          <img src="assets/images/organization.svg" alt="">
           <span>Organization</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="organization-edit.html">
+        <a class="nav-link" href="employee.html">
           <img src="assets/images/employee.svg" alt="">
           <span>Employees</span>
         </a>
@@ -216,7 +221,7 @@
   <main id="main" class="main">
 
     <div class="pagetitle">
-      <h1>Dashboard</h1>
+      <h1>Home</h1>
     </div><!-- End Page Title -->
 
     <section class="section dashboard">
