--- a/employee.html
+++ b/employee.html
@@ -372,9 +372,9 @@
               <td>
                 <p>Web Developer</p>
               </td>
-              <td>
-                <button class="btn p-0 text-primary border-0 me-3"><i class="fa fa-pencil-alt"></i></button>
-                <button class="btn p-0 text-primary border-0"><i class="fa fa-trash-alt"></i></button>
+              <td class="text-center table-icons">
+                <button class="btn p-0 border-0 me-3"><img src="assets/images/pen.svg" alt=""></button>
+                <button class="btn p-0 border-0"><img src="assets/images/trash.svg" alt=""></button>
               </td>
             </tr>
             <tr>
@@ -390,9 +390,9 @@
               <td>
                 <p>Web Developer</p>
               </td>
-              <td>
-                <button class="btn p-0 text-primary border-0 me-3"><i class="fa fa-pencil-alt"></i></button>
-                <button class="btn p-0 text-primary border-0"><i class="fa fa-trash-alt"></i></button>
+              <td class="text-center table-icons">
+                <button class="btn p-0 border-0 me-3"><img src="assets/images/pen.svg" alt=""></button>
+                <button class="btn p-0 border-0"><img src="assets/images/trash.svg" alt=""></button>
               </td>
             </tr>
             <tr>
@@ -408,9 +408,9 @@
               <td>
                 <p>Web Developer</p>
               </td>
-              <td>
-                <button class="btn p-0 text-primary border-0 me-3"><i class="fa fa-pencil-alt"></i></button>
-                <button class="btn p-0 text-primary border-0"><i class="fa fa-trash-alt"></i></button>
+              <td class="text-center table-icons">
+                <button class="btn p-0 border-0 me-3"><img src="assets/images/pen.svg" alt=""></button>
+                <button class="btn p-0 border-0"><img src="assets/images/trash.svg" alt=""></button>
               </td>
             </tr>
             <tr>
@@ -426,9 +426,9 @@
               <td>
                 <p>Web Developer</p>
               </td>
-              <td>
-                <button class="btn p-0 text-primary border-0 me-3"><i class="fa fa-pencil-alt"></i></button>
-                <button class="btn p-0 text-primary border-0"><i class="fa fa-trash-alt"></i></button>
+              <td class="text-center table-icons">
+                <button class="btn p-0 border-0 me-3"><img src="assets/images/pen.svg" alt=""></button>
+                <button class="btn p-0 border-0"><img src="assets/images/trash.svg" alt=""></button>
               </td>
             </tr>
           </tbody>
