--- a/member.html
+++ b/member.html
@@ -311,7 +311,7 @@
                 <p>essa@pencil-designs.com</p>
               </td>
               <td>
-                <p><span class="badge bg-primary rounded-5 text-success px-4 py-2">Accepted</span></p>
+                <p><span class="badge bg-secondary-light rounded-5 text-danger px-4 py-2">Rejected</span></p>
               </td>
               <td class="table-icons text-center">
                 <button class="btn p-0 text-primary border-0">
@@ -343,7 +343,7 @@
                 <p>essa@pencil-designs.com</p>
               </td>
               <td>
-                <p><span class="badge bg-primary rounded-5 text-success px-4 py-2">Accepted</span></p>
+                <p><span class="badge bg-secondary-light rounded-5 text-danger px-4 py-2">Rejected</span></p>
               </td>
               <td class="table-icons text-center">
                 <button class="btn p-0 text-primary border-0">
