--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                         <label for="pwd" class="form-label fw-bold text-black">Password</label>
                         <div class="input-group mb-3">
                             <input type="password" required class="form-control  border-end-0" id="txtPassword" placeholder="Enter password" name="password">
-                            <span class="input-group-text bg-white"><i id="toggle_pwd" class="fa fa-eye field_icon text-primary"></i></span>
+                            <span class="input-group-text bg-white"><i id="toggle_pwd" class="fa fa-eye field_icon"></i></span>
                         </div>
                         <div class="mb-3">
                         </div>
@@ -45,7 +45,7 @@
                                 </label>
                             </div>
                             <p>
-                                <a href="#" class="textBlak fw-bold">Forget Password ?</a>
+                                <a href="#" class="text-black fw-bold">Forget Password ?</a>
                             </p>
                         </div>
                         <button class="btn btn-primary w-100">Sign in</button>
