--- a/organization-details.html
+++ b/organization-details.html
@@ -224,7 +224,7 @@
       <h1 class="text-black">Organization</h1>
       <p class="py-3 fw-bold text-secondary">This is your company page.  This is a feed of the most important things you need to know.  Look out for new job vacancies, HR updates, All company announcements.  Also this is where you can link quickly to your dedicated HR platform too</p>
       <div class="card rounded-4">
-        <div class="card-header border-0">
+        <div class="card-header border-0 px-lg-5 pt-5">
           <h1>
             <span class="text-primary">K</span>inetik 
             <span class="float-end">
@@ -237,18 +237,18 @@
             </span>
           </h1>
         </div>
-        <div class="card-body pt-3">
-          <h5>Organization Name</h5>
-          <p class="pt-3 fw-bold text-black mb-1">Organization Mission.</p>
-          <p class="fw-normal">
+        <div class="card-body pt-4 px-lg-5">
+          <h5 class="fw-bold">Organization Name</h5>
+          <h6 class="pt-3 text-black mb-2">Organization Mission.</h6>
+          <p class="fw-semibold">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
           </p>
-          <p class="pt-3 fw-bold text-black mb-1">Organization Vission.</p>
-          <p class="fw-normal">
+          <h6 class="pt-3 text-black mb-2">Organization Vission.</h6>
+          <p class="fw-semibold">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
           </p>
-          <p class="pt-3 fw-bold text-black mb-1">Organization Values.</p>
-          <p class="fw-normal">
+          <h6 class="pt-3 text-black mb-2">Organization Values.</h6>
+          <p class="fw-semibold">
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
           </p>
         </div>
