--- a/team.html
+++ b/team.html
@@ -329,7 +329,7 @@
                 <div class="container">
                   <div class="row pt-lg-5 pt-3">
                     <div class="col-lg-6">
-                      <h4 class="pt-5">There is no teams to show !</h4>
+                      <h4 class="pt-lg-5 pt-4">There is no teams to show !</h4>
                       <p class="text-secondary opacity-75">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been </p>
                       <button class="btn btn-primary px-4 my-3" data-bs-toggle="modal" data-bs-target="#modalAdd"><img src="assets/images/plus.png" class="me-2"> New Team</button>
                     </div>
